--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-cropper": "^2.3.3",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-toastify": "^10.0.4",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7"
   },
